--- a/src/css/base.css
+++ b/src/css/base.css
@@ -138,21 +138,21 @@ header {
 
 .solar-box {
   position: absolute;
-  width: 100vw;
-  left: -.25rem;
-  top: 33vh;
+  width: 1024px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: calc(50% - 300px);
   pointer-events: none; }
   .solar-box .line {
-    width: 1560px;
-    left: calc(50% - (1560px/2)); }
+    width: 1024px;
+    margin: auto; }
     .solar-box .line path {
       fill: none;
       stroke: #333;
       stroke-width: 7;
-      stroke-miterlimit: 10;
-      stroke-dasharray: 11.9579, 11.9579;
+      stroke-dasharray: 10;
       opacity: .25;
-      animation: ticking 90s linear infinite; }
+      animation: ticking 180s linear infinite; }
       .dark .solar-box .line path {
         stroke: #f2c57c; }
   .solar-box .icon {
@@ -164,4 +164,4 @@ header {
   0% {
     stroke-dashoffset: 0; }
   100% {
-    stroke-dashoffset: 100%; } }
+    stroke-dashoffset: -100%; } }
